[package]
name = "codex-proxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
arc-swap = "1.7.1"
base64 = "0.22.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
time = { version = "0.3.34", features = ["formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.19.1"
tower = { version = "0.5.2", features = ["util"] }
tokio-tungstenite = "0.26.2"
